Fix width of illustrations on mobile

--- a/src/components/Projects/IllustrationsPage/IllustrationItem.css
+++ b/src/components/Projects/IllustrationsPage/IllustrationItem.css
@@ -27,3 +27,8 @@
   margin-left: 0;
   margin-right: auto;
 }
+@media screen and (max-width: 600px) {
+  .illustration {
+    width: 100%;
+  }
+}
